[workspace]
default-members = ['client/*', 'node/*', 'runtime/opal']
members = [
	'client/*',
	'crates/*',
	'node/*',
	'pallets/*',
	'primitives/*',
	'runtime/opal',
	'runtime/quartz',
	'runtime/tests',
	'runtime/unique',
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.17.0"

[profile.release]
# Runtime requires unwinding
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3

[profile.integration-tests]
debug-assertions = true
inherits = "release"

[workspace.dependencies]
# Unique
app-promotion-rpc = { path = "primitives/app_promotion_rpc", default-features = false }
evm-coder = { git = "https://github.com/UniqueNetwork/evm-coder.git", branch = "update-ethereum-crate", default-features = false, features = [
	'bondrewd',
] }
pallet-app-promotion = { path = "pallets/app-promotion", default-features = false }
pallet-balances-adapter = { default-features = false, path = "pallets/balances-adapter" }
pallet-charge-transaction = { package = "pallet-template-transaction-payment", default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "unique-polkadot-2503" }
pallet-collator-selection = { default-features = false, path = "pallets/collator-selection" }
pallet-common = { default-features = false, path = "pallets/common" }
pallet-configuration = { default-features = false, path = "pallets/configuration" }
pallet-evm-coder-substrate = { default-features = false, path = "pallets/evm-coder-substrate" }
pallet-evm-contract-helpers = { path = "pallets/evm-contract-helpers", default-features = false }
pallet-evm-migration = { path = "pallets/evm-migration", default-features = false }
pallet-evm-transaction-payment = { path = "pallets/evm-transaction-payment", default-features = false }
pallet-foreign-assets = { default-features = false, path = "pallets/foreign-assets" }
pallet-fungible = { default-features = false, path = "pallets/fungible" }
pallet-gov-origins = { default-features = false, path = "pallets/gov-origins" }
pallet-identity = { default-features = false, path = "pallets/identity" }
pallet-inflation = { path = "pallets/inflation", default-features = false }
pallet-maintenance = { default-features = false, path = "pallets/maintenance" }
pallet-nonfungible = { default-features = false, path = "pallets/nonfungible" }
pallet-refungible = { default-features = false, path = "pallets/refungible" }
pallet-structure = { default-features = false, path = "pallets/structure" }
pallet-test-utils = { default-features = false, path = "test-pallets/utils" }
pallet-unique = { path = "pallets/unique", default-features = false }
precompile-utils-macro = { default-features = false, path = "runtime/common/ethereum/precompiles/utils/macro" }
struct-versioning = { default-features = false, path = "crates/struct-versioning" }
uc-rpc = { default-features = false, path = "client/rpc" }
unique-rpc = { default-features = false, path = "node/rpc" }
up-common = { path = "primitives/common", default-features = false }
up-data-structs = { path = "primitives/data-structs", default-features = false }
up-pov-estimate-rpc = { path = "primitives/pov-estimate-rpc", default-features = false }
up-rpc = { path = "primitives/rpc", default-features = false }
up-sponsorship = { default-features = false, git = "https://github.com/uniquenetwork/pallet-sponsoring", branch = "unique-polkadot-2503" }

# Unique: Runtimes
opal-runtime = { path = "runtime/opal" }
quartz-runtime = { path = "runtime/quartz" }
unique-runtime = { path = "runtime/unique" }

# Frontier (Unique patches over the Parity version)
fc-api = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fc-consensus = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fc-db = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fc-mapping-sync = { git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fc-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fc-rpc-core = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fp-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fp-rpc = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fp-self-contained = { default-features = false, features = [
	"serde",
], git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
fp-storage = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
pallet-base-fee = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
pallet-ethereum = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
pallet-evm = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/uniquenetwork/unique-frontier", branch = "unique-polkadot-2503" }

# Parity
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = "3.7.5" }
cumulus-client-cli = { default-features = false, version = "0.22.0" }
cumulus-client-collator = { default-features = false, version = "0.22.0" }
cumulus-client-consensus-aura = { default-features = false, version = "0.22.0" }
cumulus-client-consensus-common = { default-features = false, version = "0.22.0" }
cumulus-client-consensus-proposer = { default-features = false, version = "0.19.0" }
cumulus-client-network = { default-features = false, version = "0.22.0" }
cumulus-client-parachain-inherent = { default-features = false, version = "0.16.0" }
cumulus-client-service = { default-features = false, version = "0.23.0" }
cumulus-pallet-aura-ext = { default-features = false, version = "0.20.0" }
cumulus-pallet-dmp-queue = { default-features = false, version = "0.20.0" }
cumulus-pallet-parachain-system = { default-features = false, version = "0.20.0" }
cumulus-pallet-xcm = { default-features = false, version = "0.19.1" }
cumulus-pallet-xcmp-queue = { default-features = false, version = "0.20.0" }
cumulus-primitives-aura = { default-features = false, version = "0.17.0" }
cumulus-primitives-core = { default-features = false, version = "0.18.1" }
cumulus-primitives-parachain-inherent = { default-features = false, version = "0.18.1" }
cumulus-primitives-proof-size-hostfunction = { default-features = false, version = "0.12.0" }
cumulus-primitives-storage-weight-reclaim = { default-features = false, version = "11.0.0" }
cumulus-primitives-timestamp = { default-features = false, version = "0.19.0" }
cumulus-primitives-utility = { default-features = false, version = "0.20.0" }
cumulus-relay-chain-inprocess-interface = "0.23.0"
cumulus-relay-chain-interface = { default-features = false, version = "0.22.0" }
cumulus-relay-chain-minimal-node = { default-features = false, version = "0.23.1" }
cumulus-test-relay-sproof-builder = { default-features = false, version = "0.19.0" }
frame-executive = { default-features = false, version = "40.0.0" }
frame-metadata-hash-extension = { default-features = false, version = "0.8.0" }
frame-support = { default-features = false, version = "40.1.0" }
frame-system = { default-features = false, version = "40.1.0" }
frame-system-rpc-runtime-api = { default-features = false, version = "36.0.0" }
pallet-aura = { default-features = false, version = "39.0.0" }
pallet-authorship = { default-features = false, version = "40.0.0" }
pallet-balances = { default-features = false, version = "41.1.0" }
pallet-collective = { default-features = false, version = "40.1.0" }
pallet-democracy = { default-features = false, version = "40.1.0" }
pallet-membership = { default-features = false, version = "40.0.0" }
pallet-message-queue = { default-features = false, version = "43.1.0" }
pallet-preimage = { default-features = false, version = "40.0.0" }
pallet-ranked-collective = { default-features = false, version = "40.1.0" }
pallet-referenda = { default-features = false, version = "40.1.0" }
pallet-scheduler = { default-features = false, version = "41.1.0" }
pallet-session = { default-features = false, version = "40.0.1" }
pallet-state-trie-migration = { default-features = false, version = "44.1.0" }
pallet-sudo = { default-features = false, version = "40.0.0" }
pallet-timestamp = { default-features = false, version = "39.0.0" }
pallet-transaction-payment = { default-features = false, version = "40.0.0" }
pallet-transaction-payment-rpc = { default-features = false, version = "43.0.0" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = "40.0.0" }
pallet-treasury = { default-features = false, version = "39.0.0" }
pallet-utility = { default-features = false, version = "40.0.0" }
pallet-xcm = { default-features = false, version = "19.1.1" }
parachains-common = { default-features = false, version = "21.0.0" }
parity-scale-codec = { version = "3.6.12", features = ["derive"], default-features = false }
polkadot-cli = { default-features = false, version = "23.0.0" }
polkadot-parachain-primitives = { default-features = false, version = "16.1.0" }
polkadot-primitives = { default-features = false, version = "18.1.0" }
polkadot-runtime-common = { default-features = false, version = "19.1.0" }
polkadot-service = { default-features = false, version = "23.0.0" }
sc-basic-authorship = { default-features = false, version = "0.49.0" }
sc-chain-spec = { default-features = false, version = "42.0.0" }
sc-cli = { default-features = false, version = "0.51.0" }
sc-client-api = { default-features = false, version = "39.0.0" }
sc-consensus = { default-features = false, version = "0.48.0" }
sc-consensus-manual-seal = { default-features = false, version = "0.50.0" }
sc-executor = { default-features = false, version = "0.42.0" }
sc-network = { default-features = false, version = "0.49.1" }
sc-network-sync = { default-features = false, version = "0.48.0" }
sc-rpc = { default-features = false, version = "44.0.0" }
sc-rpc-api = { default-features = false, version = "0.48.0" }
sc-service = { default-features = false, version = "0.50.0" }
sc-sysinfo = { default-features = false, version = "42.0.0" }
sc-telemetry = { default-features = false, version = "28.1.0" }
sc-tracing = { default-features = false, version = "39.0.0" }
sc-transaction-pool = "39.0.0"
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
sp-api = { default-features = false, version = "36.0.1" }
sp-arithmetic = { default-features = false, version = "26.1.0" }
sp-block-builder = { default-features = false, version = "36.0.0" }
sp-blockchain = { default-features = false, version = "39.0.0" }
sp-consensus-aura = { default-features = false, version = "0.42.0" }
sp-core = { default-features = false, version = "36.1.0" }
sp-externalities = { default-features = false, version = "0.30.0" }
sp-genesis-builder = { default-features = false, version = "0.17.0" }
sp-inherents = { default-features = false, version = "36.0.0" }
sp-io = { default-features = false, version = "40.0.1" }
sp-keystore = { default-features = false, version = "0.42.0" }
sp-offchain = { default-features = false, version = "36.0.0" }
sp-runtime = { default-features = false, version = "41.1.0" }
sp-session = { default-features = false, version = "38.1.0" }
sp-staking = { default-features = false, version = "38.0.0" }
sp-state-machine = { default-features = false, version = "0.45.0" }
sp-std = { default-features = false, version = "14.0.0" }
sp-storage = { default-features = false, version = "22.0.0" }
sp-timestamp = { default-features = false, version = "36.0.0" }
sp-tracing = { default-features = false, version = "17.1.0" }
sp-transaction-pool = { default-features = false, version = "36.0.0" }
sp-trie = { default-features = false, version = "39.1.0" }
sp-version = { default-features = false, version = "39.0.0" }
sp-weights = { default-features = false, version = "31.1.0" }
staging-parachain-info = { default-features = false, version = "0.20.0" }
staging-xcm = { default-features = false, version = "16.2.0" }
staging-xcm-builder = { default-features = false, version = "20.1.1" }
staging-xcm-executor = { default-features = false, version = "19.1.2" }
substrate-frame-rpc-system = { default-features = false, version = "43.0.0" }
substrate-prometheus-endpoint = { default-features = false, version = "0.17.2" }

# Parity: Build utils
substrate-build-script-utils = "11.0.0"
substrate-wasm-builder = "26.0.1"

# Parity: Benchmarking
frame-benchmarking = { default-features = false, version = "40.1.0" }
frame-benchmarking-cli = "47.1.0"
frame-system-benchmarking = { default-features = false, version = "40.0.0" }

# Parity: Try Runtime
frame-try-runtime = { default-features = false, version = "0.46.0" }

# ORML
orml-traits = { version = "1.4.0", default-features = false }
orml-vesting = { version = "1.4.0", default-features = false }
orml-xcm-support = { version = "1.4.0", default-features = false }
orml-xtokens = { version = "1.4.0", default-features = false }

# Other
derivative = { default-features = false, version = "2.2.0", features = ["use_core"] }
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "bbb544622208ef6e9890a2dbc224248f6dd13318", default-features = false }
evm-core = { git = "https://github.com/rust-ethereum/evm", branch = "v0.x", default-features = false }
hex-literal = "0.4.1"
impl-trait-for-tuples = "0.2.2"
jsonrpsee = { version = "0.24.9", features = ["macros", "server"] }
log = { version = "0.4.20", default-features = false }
num_enum = { version = "0.7.0", default-features = false }
serde = { default-features = false, features = ['derive'], version = "1.0.188" }
serde_json = "1"
smallvec = "1.11.1"
