[package]
authors = ['Unique Network <support@uniquenetwork.io>']
description = 'Unique Runtime Common'
edition = '2021'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'common-types'
repository = 'https://github.com/UniqueNetwork/unique-chain'
version = '0.9.24'

[features]
default = ['std']
std = [
    'sp-std/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-consensus-aura/std',
    'fp-rpc/std',
    'pallet-evm/std',
]

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.sp-consensus-aura]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.24"

[dependencies.fp-rpc]
default-features = false
git = "https://github.com/uniquenetwork/frontier"
branch = "unique-polkadot-v0.9.24"

[dependencies.pallet-evm]
default-features = false
git = "https://github.com/uniquenetwork/frontier"
branch = "unique-polkadot-v0.9.24"
