[build-dependencies]
substrate-build-script-utils = '3.0.0'

[[bin]]
name = 'nft'

[package]
authors = ['UseTech Professional <https://usetech.com/blockchain>']
build = 'build.rs'
description = 'Substrate node nft'
edition = '2018'
homepage = 'https://usetech.com/blockchain'
license = 'All Rights Reserved'
name = 'nft'
repository = 'https://github.com/usetech-llc/nft_private/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
flexi_logger = "0.15.7"
parking_lot = '0.10.0'
structopt = '0.3.8'
jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"

# Substrate dependencies
nft-runtime = { path = '../runtime', version = '3.0.0' }
frame-benchmarking = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-benchmarking-cli = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-transaction-payment-rpc = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
fc-rpc-core = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
fc-consensus = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
fc-mapping-sync = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
fc-rpc = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
fc-db = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
fp-rpc = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
sc-basic-authorship = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-cli = { version = '0.9.0', features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-client-api = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-consensus-aura = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-executor = { version = '0.9.0', features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-finality-grandpa = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

sc-keystore = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-rpc-api = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-service = { version = '0.9.0', features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-transaction-pool = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-api = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-block-builder = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-blockchain = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-consensus-aura = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-core = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-finality-grandpa = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-inherents = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-timestamp = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-transaction-pool = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
substrate-frame-rpc-system = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sc-network = { version = '0.9.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-contracts-rpc = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
pallet-ethereum = { version = "0.1.0", git = "https://github.com/PureStake/frontier.git", branch = "notlesh-substrate-8b3e5bc" }
sc-telemetry = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"

[features]
default = []
runtime-benchmarks = ['nft-runtime/runtime-benchmarks']
