################################################################################
# Build Dependencies

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

################################################################################
# Substrate Dependecies

[dependencies.frame-benchmarking]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-chain-spec]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-keystore]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-rpc-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sc-telemetry]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sc-tracing]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-block-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-api]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-blockchain]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-timestamp]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.sp-trie]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.pallet-contracts]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'

[dependencies.pallet-contracts-rpc]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '3.0.0'


[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
branch = 'rococo-v1'
version = '0.9.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.serde_json]
version = '1.0.41'


################################################################################
# Cumulus dependencies

[dependencies.cumulus-client-consensus-relay-chain]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-collator]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-cli]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-network]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'

[dependencies.cumulus-client-service]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'rococo-v1'


################################################################################
# Polkadot dependencies
[dependencies.polkadot-primitives]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-service]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-cli]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-test-service]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'

[dependencies.polkadot-parachain]
git = "https://github.com/paritytech/polkadot"
branch = 'rococo-v1'


################################################################################
# Local dependencies

[dependencies.nft-runtime]
path = '../runtime'
version = '3.0.0'

################################################################################
# Package 

[package]
authors = ['Unique Network <support@uniquenetwork.io>']
build = 'build.rs'
description = 'Substrate node nft'
edition = '2018'
homepage = 'https://unique.network'
license = 'All Rights Reserved'
name = 'nft'
repository = 'https://github.com/usetech-llc/nft_private/'
version = '3.0.0'

[[bin]]
name = 'nft'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
futures = '0.3.4'
log = '0.4.8'
flexi_logger = "0.15.7"
parking_lot = '0.10.0'
structopt = '0.3.8'
jsonrpc-core = '15.0.0'

[features]
default = []
runtime-benchmarks = ['nft-runtime/runtime-benchmarks']
