[package]
name = "nft-data-structs"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = "Nft data structs definitions"
edition = "2018"
license = 'GPL-3.0'
homepage = "https://substrate.dev"
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-contracts = { default-features = false, version = '3.0.0' }
sp-core = { version = "3.0.0", default-features = false  }
sp-runtime = { version = "3.0.0", default-features = false  }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-system/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-core/std",
  "pallet-contracts/std",
]