[package]
name = "nft-data-structs"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = "Nft data structs definitions"
edition = "2018"
license = 'GPL-3.0'
homepage = "https://substrate.dev"
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ['derive'] }
serde = { version = "1.0.119", optional = true, features = ['derive'] }
frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
frame-system = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
pallet-contracts = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
sp-core = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.3' }

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "frame-system/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-core/std",
  "pallet-contracts/std",
]